--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,28 @@
 .env
 node_modules
 .prettierrc
+
+#Client
+# dependencies
+/client/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/client/coverage
+
+# production
+/client/build
+
+# misc
+.DS_Store
+/client/.env.local
+/client.env.development.local
+/client.env.test.local
+/client.env.production.local
+
+/clientnpm-debug.log*
+/clientyarn-debug.log*
+/clientyarn-error.log*
+
+/client/.gitignore
