--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Charles Cheng",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "nodemon": "^2.0.16"
